cmake_minimum_required (VERSION 2.6)
project (relay)
add_definitions(-DASIO_STANDALONE)
include_directories(../deps/asio/include)
include_directories(../deps/googletest/googletest/include)
link_libraries(-lgtestd -lpthread)
link_directories(../deps/googletest/googlemock/gtest/)
add_executable(test test.cc)
add_executable(client client.cc)
add_executable(server server.cc)
